# fimage

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fimage.py  pyproject.toml  tox.ini
fimage/: __init__.py  channels.py  class_register.py  converters.py  ctransformations.py  exceptions.py  filters.py  fimage.py  image_array.py  presets.py
tests/: test_converters.py  test_ctransformations.py  test_filters.py
